--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,14 @@ requests[socks]
 python-heatclient
 pyyaml
 tox
-coverage!=4.4,>=4.0 # Apache-2.0
-mock>=2.0.0 # BSD
-nose>=1.3.7 # LGPL
-flake8<2.6.0,>=2.5.4 # MIT
+coverage # Apache-2.0
+mock # BSD
+nose # LGPL
+flake8 # MIT
 pylint # GPLv2
 sphinx!=1.6.6,!=1.6.7,>=1.6.2 # BSD
 sphinx-opnfv-theme
 sphinx-rtd-theme
 yamllint
-doc8>=0.6.0 # Apache-2.0
-bashate>=0.5.1 # Apache-2.0
+doc8 # Apache-2.0
+bashate # Apache-2.0
